<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.list.ListFragment">


    <LinearLayout
        android:id="@+id/linearLayoutBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:layout_weight="5"
            android:text="@string/title_list"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgAllDelete"
            android:layout_width="@dimen/size_icon"
            android:layout_height="@dimen/size_icon"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/desc_img_delete_all"
            android:layout_margin="2dp"
            android:src="@drawable/ic_delete_sweep" />

        <ImageView
            android:id="@+id/imgFilter"
            android:layout_width="@dimen/size_icon"
            android:layout_height="@dimen/size_icon"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:contentDescription="@string/desc_img_filter"
            android:src="@drawable/ic_filter_alt" />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutBar"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/list_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:contentDescription="@string/desc_float_add"
        android:focusable="true"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/ui_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@android:color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>